--- a/_posts/2025-02-05-oscp-cert.md
+++ b/_posts/2025-02-05-oscp-cert.md
@@ -1,10 +1,8 @@
 ---
 title: Offensive Security Certified Professional
 date: 2025-02-05 19:26:31 +0100
-categories: [TOP_CATEGORIE, SUB_CATEGORIE]
-tags: [TAG]     # TAG names should always be lowercase
+categories: [OffSec, Cybersecurity]
+tags: [pentest,oscp]     # TAG names should always be lowercase
 ---
-
-# Offensive Security Certified Professional
 
 Post Work In Progress.
