Fixed first post

--- a/_posts/2025-02-05-oscp-cert.md
+++ b/_posts/2025-02-05-oscp-cert.md
@@ -3,6 +3,11 @@ title: Offensive Security Certified Professional
 date: 2025-02-05 19:26:31 +0100
 categories: [OffSec, Cybersecurity]
 tags: [pentest,oscp]     # TAG names should always be lowercase
+image: /assets/img/oscp/oscp.png  # Path to your image
 ---
 
-Post Work In Progress.
+In June 2023, I successfully completed the [OffSec Certified Professional (OSCP)](https://www.offsec.com/courses/pen-200/) certification. With the goal of documenting my journey to passing the exam, I thought I would create a repository of the most useful commands and information needed to prepare for the exam.
+
+> Since the repository was created, it is possible that there have been variations in terms of exam methodology and topics covered.
+{: .prompt-warning }
+
