Fixed OSCP post

--- a/_posts/2025-02-05-oscp-cert.md
+++ b/_posts/2025-02-05-oscp-cert.md
@@ -11,3 +11,4 @@ In June 2023, I successfully completed the [OffSec Certified Professional (OSCP)
 > Since the repository was created, it is possible that there have been variations in terms of exam methodology and topics covered.
 {: .prompt-warning }
 
+The repository is available [here](https://github.com/finavi/oscp-2023-cheatsheet).
