Tag Fix Second Post

--- a/_posts/2025-02-07-kali-prep.md
+++ b/_posts/2025-02-07-kali-prep.md
@@ -1,8 +1,8 @@
 ---
 title: Offensive Security Certified Professional
 date: 2025-02-07 20:16:31 +0100
-categories: [OffSec, Cybersecurity]
-tags: [pentest,oscp]     # TAG names should always be lowercase
+categories: [Cybersecurity, CTF]
+tags: [pentest,ctf,kali]     # TAG names should always be lowercase
 ---
 
 This is an ongoing section. You will find guidance on setting up a Kali Virtual Machine for the purpose of CTF and similar activities.
