Second Post Title

--- a/_posts/2025-02-07-kali-prep.md
+++ b/_posts/2025-02-07-kali-prep.md
@@ -1,5 +1,5 @@
 ---
-title: Offensive Security Certified Professional
+title: Kali Virtual Machine Setup
 date: 2025-02-07 20:16:31 +0100
 categories: [Cybersecurity, CTF]
 tags: [pentest,ctf,kali]     # TAG names should always be lowercase
